Fixing large white spacing in the signup form

--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ nav a {
 }
 .form1 {
   max-width: 100%;
-  margin: 100px 0;
+  margin: 50px 0;
 }
 input::placeholder {
   color: #4cddfd;
